FELIX-6574 : Update to OSGi Servlet Whiteboard specification